--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="item shadow mb-4">
-                            <h3 class="item-title">Puma palermo</h3>
+                            <h3 class="item-title"> Buzo Puma</h3>
 
-                            <img class="item-image" src="./img/pumas-palermo.jpg">
+                            <img class="item-image" src="./img/buzo-puma.jpg">
 
                             <div class="item-details">
                                 <h4 class="item-price">9.99€</h4>
@@ -118,9 +118,9 @@
                 <div class="row">
                     <div class="col-12 col-md-6">
                         <div class="item shadow mb-4">
-                            <h3 class="item-title">Jordan 1</h3>
+                            <h3 class="item-title">Bolso puma</h3>
 
-                            <img class="item-image" src="./img/zapatillas-jorda-1.webp">
+                            <img class="item-image" src="./img/bolso-nike.jpg">
                             <div class="item-details">
                                 <h4 class="item-price">19.99€</h4>
                                 <button class="btn btn-danger addToCart">AÑADIR AL CARRITO</button>
