--- a/index.html
+++ b/index.html
@@ -219,7 +219,25 @@
     </section>
 
     <footer class="bg-dark p-3 mt-5">
-        <p class="color">& TIENDA DE ZAPATILLAS &</p>
+        <div class="content-items-footer">
+            <li class="pie-pag">
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <img src="./img/facebook.png" alt="">
+                    </a>
+                </a>
+            </li>
+            <li class="pie-pag">
+                <a href="https://www.youtube.com/" target="_blank">
+                    <img src="./img/youtube.png" alt="">
+                </a>
+            </li>
+            <li class="pie-pag">
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="./img/instagram.png" alt="">
+                </a>
+            </li>
+                <p class="color">& TIENDA DE ZAPATILLAS &</p>
+        </div>
     </footer>
 
 
